@@ -1305,83 +1305,37 @@ public class KlingonContentProvider extends ContentProvider {
           sharedPrefs.getBoolean(
               Preferences.KEY_KLINGON_UI_CHECKBOX_PREFERENCE, /* default */ false);
       if (mSentenceType == SentenceType.EMPIRE_UNION_DAY) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.empire_union_day_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.empire_union_day);
-        // }
       } else if (mSentenceType == SentenceType.CURSE_WARFARE) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.curse_warfare_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.curse_warfare);
-        // }
         /*
          * IDIOM is commented out because it's not in the menu yet, since we have no good
-         * translation for the word. } else if (mSentenceType == SentenceType.IDIOM) { if
-         * (useKlingonUI) { return mContext.getResources().getString(R.string.idioms_tlh); } else {
+         * translation for the word. } else if (mSentenceType == SentenceType.IDIOM) {
          * return mContext.getResources().getString(R.string.idioms); }
          */
       } else if (mSentenceType == SentenceType.NENTAY) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.nentay_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.nentay);
-        // }
         /*
          * PROVERB is also commented out because it's not in the menu yet either, due to
-         * incompleteness. } else if (mSentenceType == SentenceType.PROVERB) { if (useKlingonUI) {
-         * return mContext.getResources().getString(R.string.proverbs_tlh); } else { return
+         * incompleteness. } else if (mSentenceType == SentenceType.PROVERB) { return
          * mContext.getResources().getString(R.string.proverbs); }
          */
       } else if (mSentenceType == SentenceType.MILITARY_CELEBRATION) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.military_celebration_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.military_celebration);
-        // }
       } else if (mSentenceType == SentenceType.REJECTION) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.rejection_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.rejection);
-        // }
       } else if (mSentenceType == SentenceType.REPLACEMENT_PROVERB) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.replacement_proverbs_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.replacement_proverbs);
-        // }
       } else if (mSentenceType == SentenceType.SECRECY_PROVERB) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.secrecy_proverbs_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.secrecy_proverbs);
-        // }
       } else if (mSentenceType == SentenceType.TOAST) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.toasts_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.toasts);
-        // }
       } else if (mSentenceType == SentenceType.LYRICS) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.lyrics_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.lyrics);
-        // }
       } else if (mSentenceType == SentenceType.BEGINNERS_CONVERSATION) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.beginners_conversation_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.beginners_conversation);
-        // }
       } else if (mSentenceType == SentenceType.JOKE) {
-        // if (useKlingonUI) {
-        //   return mContext.getResources().getString(R.string.jokes_tlh);
-        // } else {
         return mContext.getResources().getString(R.string.jokes);
-        // }
       }
 
       // The empty string is returned if the type is general PHRASE.
