@@ -2413,7 +2413,7 @@ Watch Gowron say this: {YouTube video:url:http://www.youtube.com/v/7_rXiSTQmAE}<
       <column name="hidden_notes"></column>
       <column name="components">{ghoj:v}, {-moH:v}</column>
       <column name="examples">
-▶ {ghojwI'pu' chu' ghojmoH jatlhwI'pu' po'qu'.}[2]</column>
+▶ {ghojwI'pu' chu' ghojmoH jatlhwI'pu' po'qu'.:sen@@ghojwI':n, -pu':n, chu':v:1, ghojmoH:v, jatlh:v, -wI':v, -pu':v, po':v, -qu':v}[2]</column>
       <column name="examples_de"></column>
       <column name="search_tags"></column>
       <column name="search_tags_de"></column>
